Updating RollupRepository log message

--- a/rollup/core/classes/RollupRepository.cls
+++ b/rollup/core/classes/RollupRepository.cls
@@ -1,4 +1,4 @@
-public without sharing class RollupRepository {
+public without sharing class RollupRepository implements RollupLogger.ToStringObject {
   public static final Integer SENTINEL_COUNT_VALUE = -1;
 
   private final Args args = new Args();
@@ -29,12 +29,12 @@ public without sharing class RollupRepository {
   }
 
   public Database.QueryLocator getLocator() {
-    RollupLogger.Instance.log('Getting query locator for', this.args.query, LoggingLevel.DEBUG);
+    this.createQueryLog('Getting query locator');
     return Database.getQueryLocatorWithBinds(this.args.query, this.args.bindVars, this.accessLevel);
   }
 
   public List<SObject> get() {
-    RollupLogger.Instance.log('Querying...', this.args.query, LoggingLevel.DEBUG);
+    this.createQueryLog('Querying...');
     return Database.queryWithBinds(this.args.query, this.args.bindVars, this.accessLevel);
   }
 
@@ -53,11 +53,22 @@ public without sharing class RollupRepository {
       // return a sentinel value instead, to be checked for downstream
       countAmount = SENTINEL_COUNT_VALUE;
     }
-    RollupLogger.Instance.log('Count query: ' + this.args.query, 'Returned amount: ' + countAmount, LoggingLevel.DEBUG);
+    this.createQueryLog('Returned amount: ' + countAmount);
     return countAmount;
   }
 
   public override String toString() {
     return this.args.query + '\n' + 'with bind var keys: ' + this.args.bindVars.keySet();
+  }
+
+  private void createQueryLog(String message) {
+    RollupLogger.Instance.Log(
+      message,
+      'Query: ' +
+      this.args.query +
+      '\nAccess level: ' +
+      (this.accessLevel == System.AccessLevel.SYSTEM_MODE ? 'System' : 'User'),
+      LoggingLevel.DEBUG
+    );
   }
 }
