--- a/rollup/core/classes/RollupRepository.cls
+++ b/rollup/core/classes/RollupRepository.cls
@@ -1,8 +1,9 @@
-public without sharing class RollupRepository {
+public without sharing class RollupRepository implements RollupLogger.ToStringObject {
   public static final Integer SENTINEL_COUNT_VALUE = -1;
 
   private final Args args = new Args();
   private final System.AccessLevel accessLevel;
+  private final String accessLevelName;
 
   private class Args {
     public final Map<String, Object> bindVars = new Map<String, Object>();
@@ -11,6 +12,7 @@ public without sharing class RollupRepository {
 
   public RollupRepository(System.AccessLevel accessLevel) {
     this.accessLevel = accessLevel;
+    this.accessLevelName = this.accessLevel == System.AccessLevel.SYSTEM_MODE ? 'System' : 'User';
   }
 
   public RollupRepository setQuery(String query) {
@@ -29,12 +31,12 @@ public without sharing class RollupRepository {
   }
 
   public Database.QueryLocator getLocator() {
-    RollupLogger.Instance.log('Getting query locator for', this.args.query, LoggingLevel.DEBUG);
+    this.createQueryLog('Getting query locator');
     return Database.getQueryLocatorWithBinds(this.args.query, this.args.bindVars, this.accessLevel);
   }
 
   public List<SObject> get() {
-    RollupLogger.Instance.log('Querying...', this.args.query, LoggingLevel.DEBUG);
+    this.createQueryLog('Querying...');
     return Database.queryWithBinds(this.args.query, this.args.bindVars, this.accessLevel);
   }
 
@@ -48,15 +50,20 @@ public without sharing class RollupRepository {
     try {
       countAmount = Database.countQueryWithBinds(this.args.query, this.args.bindVars, this.accessLevel);
     } catch (Exception ex) {
-      RollupLogger.Instance.log('an error occurred while trying to get count query:\n' + this.args.query, ex, LoggingLevel.WARN);
+      RollupLogger.Instance.log('an error occurred while trying to get count query', ex, LoggingLevel.WARN);
       // not all count queries are valid, particularly those with polymorphic fields referencing parent fields
       // return a sentinel value instead, to be checked for downstream
       countAmount = SENTINEL_COUNT_VALUE;
     }
+    this.createQueryLog('Returned amount: ' + countAmount);
     return countAmount;
   }
 
   public override String toString() {
     return this.args.query + '\n' + 'with bind var keys: ' + this.args.bindVars.keySet();
+  }
+
+  private void createQueryLog(String message) {
+    RollupLogger.Instance.Log(message, 'Query: ' + this.args.query + '\nAccess level: ' + this.accessLevelName, LoggingLevel.DEBUG);
   }
 }
