Updates RollupAsyncProcessor to use the correct record collection when considering which parent record fields to reset

--- a/rollup/core/classes/RollupAsyncProcessor.cls
+++ b/rollup/core/classes/RollupAsyncProcessor.cls
@@ -505,7 +505,7 @@ global virtual without sharing class RollupAsyncProcessor extends Rollup impleme
       }
     }
     this.lookupItems = localLookupItems;
-    this.fullRecalcProcessor?.processParentFieldsToReset(this.lookupItems);
+    this.fullRecalcProcessor?.processParentFieldsToReset(recordsToReset);
     return this.lookupItems;
   }
 
