--- a/extra-tests/classes/RollupRepositoryTests.cls
+++ b/extra-tests/classes/RollupRepositoryTests.cls
@@ -4,7 +4,7 @@ private class RollupRepositoryTests {
   static void transformsCountQueriesProperly() {
     String queryString = 'SELECT Id, AnnualRevenue, Name\nFROM Account';
 
-    Integer accountCount = new RollupRepository(System.AccessLevel.SYSTEM_MODE).setQuery(queryString).getCount();
+    Integer accountCount = new RollupRepository(RollupRepository.PermissionLevel.SYSTEM_MODE).setQuery(queryString).getCount();
 
     System.assertEquals(0, accountCount);
   }
