--- a/rollup/core/classes/RollupFullRecalcProcessor.cls
+++ b/rollup/core/classes/RollupFullRecalcProcessor.cls
@@ -132,10 +132,12 @@ global abstract without sharing class RollupFullRecalcProcessor extends RollupAs
   }
 
   protected virtual override Map<String, String> customizeToStringEntries(Map<String, String> props) {
-    props = super.customizeToStringEntries(props);
-    this.addToMap(props, 'Rollup Metadata', this.rollupMetas);
-    this.addToMap(props, 'Query String', this.queryString);
-    this.addToMap(props, 'Caboose Count', this.cabooses.size());
+    if (this.rollupControl?.IsRollupLoggingEnabled__c == true) {
+      props = super.customizeToStringEntries(props);
+      this.addToMap(props, 'Rollup Metadata', this.rollupMetas);
+      this.addToMap(props, 'Query String', this.queryString);
+      this.addToMap(props, 'Caboose Count', this.cabooses.size());
+    }
     return props;
   }
 
