Vastly simplified Rollup.toString, avoiding unncessary heap consumption when logging is disabled

--- a/rollup/core/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/core/classes/RollupFullBatchRecalculator.cls
@@ -17,10 +17,8 @@ public without sharing virtual class RollupFullBatchRecalculator extends RollupF
   }
 
   protected override Map<String, String> customizeToStringEntries(Map<String, String> props) {
-    if (this.rollupControl?.IsRollupLoggingEnabled__c == true) {
-      props = super.customizeToStringEntries(props);
-      this.addToMap(props, 'Stateful Previously Reset Parents', this.statefulPreviouslyResetParents);
-    }
+    super.customizeToStringEntries(props);
+    this.addToMap(props, 'Stateful Previously Reset Parents', this.statefulPreviouslyResetParents);
     return props;
   }
 
